<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/padding_layout"
    tools:context=".diagnose.DiagnoseActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/diagnosis" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/home_perintah"
        android:textAlignment="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_petunjuk" />

    <EditText
        android:id="@+id/et_gejala"
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_edittext"
        android:elevation="1dp"
        android:hint="@string/hint_gejala"
        android:inputType="text"
        android:maxLines="1"
        android:padding="16dp"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_cek_gejala"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cek_gejala" />
</LinearLayout>