<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardElevation="8dp"
    app:cardCornerRadius="@dimen/item_hospital_radius">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_layout">

        <ImageView
            android:id="@+id/iv_hospital"
            android:layout_width="@dimen/item_hospital_width"
            android:layout_height="@dimen/item_hospital_height"
            android:layout_marginBottom="8dp"
            android:background="@drawable/shape_photo_rounded"
            android:scaleType="fitXY"
            android:src="@drawable/photo_hospitaldummy1" />

        <TextView
            android:id="@+id/tv_hospital_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_hospital"
            android:layout_marginBottom="12dp"
            android:text="@string/dummy_hospital1"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_hospital_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_hospital_name"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="8dp"
            android:text="@string/dummy_distance1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/tv_hospital_distance"
            android:layout_toRightOf="@id/tv_hospital_distance"
            android:text="@string/from_ur_loc" />

        <TextView
            android:id="@+id/tv_title_antrean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_hospital_distance"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/antrean" />

        <TextView
            android:id="@+id/tv_status_antrean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/tv_title_antrean"
            android:layout_toRightOf="@id/tv_title_antrean"
            android:text="@string/dummy_waiting_status1"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_make_an_appointment"
            android:layout_width="@dimen/item_hospital_width"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_title_antrean"
            android:background="@drawable/shape_button_round_corner"
            android:text="@string/buat_janji_rs" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>



