<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    app:cardCornerRadius="@dimen/item_hospital_radius"
    app:cardElevation="8dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_layout">

        <ImageView
            android:id="@+id/iv_hospital"
            android:layout_width="@dimen/item_hospital_width"
            android:layout_height="@dimen/item_hospital_height"
            android:layout_marginBottom="8dp"
            android:background="@drawable/shape_photo_rounded"
            android:scaleType="fitXY"
            android:src="@drawable/photo_hospitaldummy1" />

        <TextView
            android:id="@+id/tv_hospital_name"
            android:layout_width="168dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_hospital"
            android:layout_marginBottom="12dp"
            android:ellipsize="end"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textStyle="bold"
            tools:text="@string/dummy_hospital1" />

        <TextView
            android:id="@+id/tv_hospital_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_hospital_name"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="8dp"
            tools:text="@string/dummy_distance1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/tv_hospital_distance"
            android:layout_toRightOf="@id/tv_hospital_distance"
            android:text="@string/from_ur_loc" />

        <TextView
            android:id="@+id/tv_title_antrean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_hospital_distance"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/antrean" />

        <TextView
            android:id="@+id/tv_status_antrean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/tv_title_antrean"
            android:layout_toRightOf="@id/tv_title_antrean"
            android:textStyle="bold"
            tools:text="@string/dummy_waiting_status1" />

        <Button
            android:id="@+id/btn_make_an_appointment"
            android:layout_width="@dimen/item_hospital_width"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_title_antrean"
            android:background="@drawable/shape_button_round_corner"
            android:text="@string/buat_janji_rs" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>



