<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity"
    android:padding="24dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_email"
            style="@style/LayoutLoginRegis"
            android:hint="@string/et_email">

            <com.google.android.material.textfield.TextInputEditText style="@style/EditTextShape.Full.LoginRegis" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_password"
            android:layout_below="@+id/et_email"
            style="@style/LayoutLoginRegis.Password"
            android:hint="@string/et_password">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/EditTextShape.Full.LoginRegis" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:text="@string/btn_masuk"
            android:layout_marginTop="24dp"
            android:layout_below="@+id/et_password"
            style="@style/MyButton.Login"/>
        <Button
            android:id="@+id/btn_register"
            android:text="@string/btn_make_account"
            android:layout_below="@+id/btn_login"
            style="@style/MyButton.Register"/>
    </RelativeLayout>

</RelativeLayout>